Add contents anf format index file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,72 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
+    <header class="section">
+      <div class="subsection subsection1">
+        <img src="./resources/images/logo.png" alt="Logo">
+        <p>SECRET AGENT SUPPLY INC.</p>
+      </div>
+    </header>
 
+    <section class="section">
+      <div class="subsection subsection2">
+        <div class="newarrival">
+          <p>NEW ARRIVAL</p>
+          <p>SPORT BIKES AND MOTORCYCLES</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="subsection subsection3">
+        <p>Eyewear</p>
+        <p>Apparel</p>
+        <p>Gadgets</p>
+        <p>Vehicles</p>
+        <p>Classes</p>
+        <p>Contact</p>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="subsection subsection4">
+        <div class="gallery">
+          <div class="product">
+            <img src="./resources/images/pen.png" alt="Exploding pen">
+            <p>Exploding Pen</p>
+          </div>
+
+          <div class="product">
+            <img src="./resources/images/watch.png" alt="Cellular Watch">
+            <p>Cellular Watch</p>
+          </div>
+
+          <div class="product">
+            <img src="./resources/images/glasses.png" alt="Thermal Glasses">
+            <p>Thermal Glasses</p>
+          </div>
+        </div>
+
+        <div class="whereabouts">
+          <div class="about">
+            <p>Location</p>
+            <p>-47.346436, 84.32354</p>
+          </div>
+
+          <div class="about">
+            <p>Hours</p>
+            <p>0800 - 1800</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <footer class="section">
+      <div class="subsection">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
+    </footer>
+    
   </body>
 </html>
