Finish css tyling with all sections.

--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
-    <header class="section">
+    <header class="section section1">
       <div class="subsection subsection1">
         <img src="./resources/images/logo.png" alt="Logo">
         <p>SECRET AGENT SUPPLY INC.</p>
       </div>
     </header>
 
-    <section class="section">
+    <section class="section section2">
       <div class="subsection subsection2">
         <div class="newarrival">
-          <p>NEW ARRIVAL</p>
-          <p>SPORT BIKES AND MOTORCYCLES</p>
+          <p class="headline">NEW ARRIVAL</p>
+          <p class="body">SPORT BIKES AND</p>
+          <p class="body2"> MOTORCYCLES</p>
         </div>
       </div>
     </section>
 
-    <section class="section">
+    <section class="section section3">
       <div class="subsection subsection3">
         <p>Eyewear</p>
         <p>Apparel</p>
@@ -34,7 +35,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section section4">
       <div class="subsection subsection4">
         <div class="gallery">
           <div class="product">
@@ -47,7 +48,7 @@
             <p>Cellular Watch</p>
           </div>
 
-          <div class="product">
+          <div class="product glasses">
             <img src="./resources/images/glasses.png" alt="Thermal Glasses">
             <p>Thermal Glasses</p>
           </div>
@@ -55,24 +56,24 @@
 
         <div class="whereabouts">
           <div class="about">
-            <p>Location</p>
-            <p>-47.346436, 84.32354</p>
+            <p class="title">Location</p>
+            <p class="details">-47.346436, 84.32354</p>
           </div>
 
           <div class="about">
-            <p>Hours</p>
-            <p>0800 - 1800</p>
+            <p class="title">Hours</p>
+            <p class="details">0800 - 1800</p>
           </div>
         </div>
 
       </div>
     </section>
 
-    <footer class="section">
-      <div class="subsection">
-        <p>Copyright Secret Agent Supply Inc.</p>
+    <footer class="section section5">
+      <div class="subsection footer">
+        <p>&copy Copyright Secret Agent Supply Inc.</p>
       </div>
     </footer>
-    
+
   </body>
 </html>
