Add media query to add responsiveness to tablets.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p>Vehicles</p>
         <p>Classes</p>
         <p>Contact</p>
+        <p class="tabletmenu">Menu</p>
       </div>
     </section>
 
