Add media query for responsiveness to mobile phones.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <div class="subsection subsection2">
         <div class="newarrival">
           <p class="headline">NEW ARRIVAL</p>
-          <p class="body">SPORT BIKES AND</p>
-          <p class="body2"> MOTORCYCLES</p>
+          <p class="body">SPORT BIKES AND MOTORCYCLES</p>
         </div>
       </div>
     </section>
@@ -44,7 +43,7 @@
             <p>Exploding Pen</p>
           </div>
 
-          <div class="product">
+          <div class="product watch">
             <img src="./resources/images/watch.png" alt="Cellular Watch">
             <p>Cellular Watch</p>
           </div>
@@ -56,12 +55,12 @@
         </div>
 
         <div class="whereabouts">
-          <div class="about">
+          <div class="about about1">
             <p class="title">Location</p>
             <p class="details">-47.346436, 84.32354</p>
           </div>
 
-          <div class="about">
+          <div class="about about2">
             <p class="title">Hours</p>
             <p class="details">0800 - 1800</p>
           </div>
